Add priority to chore

--- a/test/fixtures/chores.yml
+++ b/test/fixtures/chores.yml
@@ -4,8 +4,10 @@ one:
   title: MyString
   desc: MyText
   due_date: <%= (DateTime.now + 10).strftime('%Y-%m-%d %I:%M:%S') %>
+  priority: 0
 
 two:
   title: MyString
   desc: MyText
   due_date: <%= (DateTime.now + 10).strftime('%Y-%m-%d %I:%M:%S') %>
+  priority: 0
